<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IM timetracking</string>
    <string name="action_home">Home</string>
    <string name="activity_pdf_archive">PDF Archive</string>
    <string name="action_export_pdf">Share as PDF</string>
    <string name="action_pdf_archive">PDF Archive</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About</string>
    <string name="activity_about_title">About</string>
    <string name="activity_about_heading">About IM timetracking</string>
    <string name="activity_about_text">Thank you for using the IM timetacking app!\n\nThis app is brought to you by Inglorious Mind. The app comes free of charge and we hope you enjoy using it. If you have any feedback, suggestions or feature wishes, do not hesitate to tell us about it. We will do our best to improve the app and provide you the best possible user experience.\n\nVisit us on the web: http://www.ingloriousmind.com \n\n Write us an email: ingloriousmind@gmail.com </string>
    <string name="fragment_tracking_list_empty">There are no time trackings</string>
    <string name="activity_home_overlay_unnamed_tracking_title">unnamed task</string>
    <string name="dialog_tracking_edit_heading">Edit Tracking</string>
    <string name="dialog_tracking_edit_title_hint">Tracking title</string>
    <string name="dialog_tracking_edit_btn_save">Save</string>
    <string name="dialog_title_delete">Delete?</string>
    <string name="dialog_msg_delete">Delete \'%1$s\' tracking?</string>
    <string name="dialog_title_delete_all">Clear trackings</string>
    <string name="dialog_msg_delete_all">Are you sure you want to remove all trackings?</string>
    <string name="dialog_title_delete_all_pdfs">Clear archived Pdf files</string>
    <string name="dialog_msg_delete_all_pdfs">Are you sure you want to remove all archived pdf files?</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_retry">Retry</string>
    <string name="list_item_tracking_initial_time">00:00</string>
    <string name="list_item_tracking_unnamed_title">unnamed tracking</string>
    <string name="home_activity_share_pdf_intent_chooser_title">Send PDF export</string>
    <string name="dialog_share_pdf_error_title">Failed Exporting PDF</string>
    <string name="dialog_share_pdf_error_msg">Something went wrong</string>
    <string name="dialog_share_pdf_error_btn_retry">@string/dialog_btn_retry</string>
    <string name="dialog_share_pdf_error_btn_cancel">@string/dialog_btn_cancel</string>
    <string name="dialog_open_pdf_error_title">Failed opening PDF</string>
    <string name="dialog_open_pdf_error_msg">No app to open PDF files found on the device.</string>
    <string name="dialog_open_pdf_error_btn_retry">@string/dialog_btn_retry</string>
    <string name="dialog_open_pdf_error_btn_cancel">@string/dialog_btn_cancel</string>
    <string name="home_activity_progress_indicator_msg">Loading…</string>
    <string name="total">Total:\u0020</string>
    <string name="activity_archive_pdf_empty">No archived PDF files</string>

</resources>
