<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomeActivity">

    <item
        android:id="@+id/action_export_pdf"
        android:icon="@drawable/ic_pdf_green"
        android:orderInCategory="1"
        android:title="@string/action_export_pdf"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_pdf_archive"
        android:orderInCategory="1"
        android:title="@string/action_pdf_archive"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="1"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
