<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_edit_heading"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="12dp" />

        <EditText
            android:id="@+id/dialog_tracking_edit_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_tracking_edit_title_hint"
            android:layout_margin="8dp" />

        <EditText
            android:id="@+id/dialog_tracking_edit_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_tracking_edit_description_hint"
            android:layout_margin="8dp" />

        <TimePicker
            android:id="@+id/dialog_tracking_edit_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <Button
            android:id="@+id/dialog_tracking_edit_btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tracking_edit_btn_save"
            android:layout_margin="40dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp" />
    </LinearLayout>

</ScrollView>